--- a/wmm.html
+++ b/wmm.html
@@ -1,1 +1,60 @@
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+    <meta charset="UTF-8">
+    <title>وزنة</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
+</head>
+<body>
 
+<header class="header">
+    <img src="assets/images/wzzznh.png" alt="وزنة" class="logo">
+    <p class="tagline">اتقن شاهيك… بميزان دقيق</p>
+</header>
+
+<main class="card">
+
+    <!-- نوع الشاهي -->
+    <div class="section">
+        <label>اختر نوع الشاهي</label>
+        <select id="teaType">
+            <option value="hawt">الحوت</option>
+            <option value="rabee">ربيع</option>
+            <option value="manis">المانيس</option>
+            <option value="abuJabal">أبو جبل</option>
+            <option value="ceylani">سيلاني</option>
+        </select>
+    </div>
+
+    <!-- قوة الشاهي -->
+    <div class="section">
+        <label>قوة الشاهي</label>
+        <select id="strength">
+            <option value="light">خفيف</option>
+            <option value="medium" selected>وسط</option>
+            <option value="strong">ثقيل</option>
+        </select>
+    </div>
+
+    <!-- كمية الماء -->
+    <div class="section">
+        <label>كمية الماء (بالملي)</label>
+        <input type="number" id="waterAmount" placeholder="مثال: 1000">
+
+        <div id="customAlert" class="custom-alert">
+            <p id="alertText"></p>
+        </div>
+    </div>
+
+    <!-- النتيجة -->
+    <div class="result-box">
+        <p>الوزنة المطلوبة:</p>
+        <h2 id="result">0 غرام</h2>
+    </div>
+
+</main>
+
+<script src="assets/js/app.js"></script>
+</body>
+</html>
